Fixed tslint things and worked more on the ui

--- a/app/style/app.css
+++ b/app/style/app.css
@@ -34,3 +34,12 @@
 .section--state-false {
 
 }
+
+.durationInput--minutes,
+.durationInput--seconds {
+    width: 100px;
+}
+
+.durationInput--colon {
+    line-height: 38px;
+}
