--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -1,7 +1,7 @@
 .device--connectionState {
-    margin-left: 10px;
-    font-size: 18px;
-    font-weight: 100;
+    margin-left: .75em;
+    font-size: .75em;
+    font-weight: lighter;
 }
 
 .device--connectionState-connected {
@@ -14,12 +14,12 @@
 
 .section--number,
 .program--number {
-    width: 20px
+    width: 2em
 }
 
 .section--name /*,
 .program--name*/ {
-    width: 150px;
+    width: 10em;
     white-space: nowrap;
 }
 
@@ -37,13 +37,16 @@
 
 .durationInput--minutes > input,
 .durationInput--seconds > input {
-    width: 70px !important;
+    width: 6em !important;
 }
 
 .messages {
     position: fixed;
-    top: 12px;
-    left: 12px;
-    right: 12px;
+    /* top: 12px; */
+    bottom: 1em;
+    left: 1em;
+    right: 1em;
     z-index: 1000;
+    display: flex;
+    flex-direction: column;
 }
