--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -46,6 +46,7 @@
     bottom: 1em;
     left: 1em;
     right: 1em;
+    padding-left: 0;
     z-index: 1000;
     display: flex;
     flex-direction: column;
