--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -12,6 +12,20 @@
     color: #D20000;
 }
 
+.sectionRunner--pausedState {
+    padding-left: .75em;
+    font-size: .75em;
+    font-weight: lighter;
+}
+
+.sectionRunner--pausedState > .fa {
+    padding-right: .2em;
+}
+
+.sectionRunner--pausedState-unpaused {
+    color: #BBBBBB;
+}
+
 .section--number,
 .program--number {
     width: 2em
