--- a/app/components/DeviceView.scss
+++ b/app/components/DeviceView.scss
@@ -1,24 +1,39 @@
 .device {
-    .header {
-        display: flex !important;
-        flex-direction: column;
-        @media only screen and (min-width : 768px) {
-            flex-direction: row;
-        }
+  .header {
+    display: flex !important;
+    flex-direction: column;
+    @media only screen and (min-width: 768px) {
+      flex-direction: row;
     }
-    .connectionState {
-        @media only screen and (min-width : 768px) {
-            margin-left: .75em;
-        }
-        font-size: .75em;
-        font-weight: lighter;
-
-        &.connected {
-            color: #13D213;
-        }
-
-        &.disconnected {
-            color: #D20000;
-        }
+  }
+  .ui.stackable.grid.in-container > .row > .column {
+    @media only screen and (max-width: 991px) {
+      padding-left: 0 !important;
+      padding-right: 0 !important;
     }
+  }
+  .ui.stackable.grid.in-container {
+    margin-top: 0;
+  }
+  .connectionState {
+    @media only screen and (min-width: 768px) {
+      margin-left: .75em;
+    }
+    font-size: .75em;
+    font-weight: lighter;
+
+    &.connected {
+      color: #13D213;
+    }
+
+    &.disconnected {
+      color: #D20000;
+    }
+  }
+}
+
+.sectionRunner .queue {
+  max-height: 14em;
+  height: 14em;
+  overflow-y: scroll;
 }
