--- a/app/styles/SectionChooser.scss
+++ b/app/styles/SectionChooser.scss
@@ -1,5 +1,7 @@
 .sectionChooser {
   .ui.selection.dropdown {
-    min-width: 14em;
+    min-width: 10em;
+    max-width: 100%;
+    width: 14em !important;
   }
 }
