Keep track of editing state with query string; allow deleting of program items

--- a/app/styles/ProgramSequenceView.scss
+++ b/app/styles/ProgramSequenceView.scss
@@ -10,8 +10,11 @@
   z-index: 2000;
   display: flex;
   margin-bottom: .5em;
-  i.icon {
-    margin: .5rem;
+  .fields {
+    margin: 0em 0em 1em !important;
+  }
+  .ui.icon.button {
+    height: fit-content;
   }
   .header {
     font-weight: bold;
