--- a/app/styles/ProgramSequenceView.scss
+++ b/app/styles/ProgramSequenceView.scss
@@ -7,9 +7,11 @@
 
 .programSequence-item {
   list-style-type: none;
-  z-index: 2000;
   display: flex;
   margin-bottom: .5em;
+  &.dragging {
+    z-index: 1010;
+  }
   .fields {
     margin: 0em 0em 1em !important;
   }
